--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
           </div>
           <div class="col-lg-6 header--negro">
            <div class="row">
-               <div class="col-lg-10 d-flex align-items-center">
+               <div class="col-lg-9 p-0 d-flex align-items-center">
                    <div class="header__right">
                        <ul>
                            <li><a href="">Contacto</a></li>
@@ -31,10 +31,16 @@
                        </ul>
                    </div>
                </div>
-               <div class="col-lg-2">
-                   <div class="carrito">
-                       <img src="assets/img/iconos/carrito.svg" alt="">
-                   </div>
+               <div class="col-lg-3">
+                    <div class="notificacion">
+                        <ul>                           
+                            <li>
+                                <a href="" class="carrito">
+                                    <img src="assets/img/iconos/carrito.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                </div>
            </div>
           </div>
