--- a/src/app/pages/registrate/registrate.component.html
+++ b/src/app/pages/registrate/registrate.component.html
@@ -24,7 +24,7 @@
                                 <button type="submit" class="btn btn--negro">Crear mi cuenta</button>
                             </div>
                             <div class="col-lg-5">
-                                <span>¿Ya tienes cuenta? <a href="">Iniciar sesión</a> </span>
+                                <span>¿Ya tienes cuenta? <a href="auth/login">Iniciar sesión</a> </span>
                             </div>
                         </form>
                     </div>
