--- a/src/app/user/dashboard-user/dashboard-user.component.html
+++ b/src/app/user/dashboard-user/dashboard-user.component.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="dashboard__tabs">
-                        <a routerLink="subasta"><img src="assets/img/iconos/subasta.svg" alt=""> <span>Subastas</span></a>
+                        <a routerLink="subasta" class="active"><img src="assets/img/iconos/subasta.svg" alt=""> <span>Subastas</span></a>
                         <a routerLink="tienda"><img src="assets/img/iconos/tienda.svg" alt="">  <span>Tienda</span></a>
                         <a routerLink="mancolista"><img src="assets/img/iconos/mancolista.svg" alt="">  <span>Mi Mancolista</span></a>
                         <a routerLink="configuracion" ><img src="assets/img/iconos/configuracion.svg" alt=""> <span>Configuración</span></a>
