--- a/src/app/pages/iniciar/iniciar.component.html
+++ b/src/app/pages/iniciar/iniciar.component.html
@@ -19,7 +19,7 @@
                                 <button type="submit" class="btn btn--negro">Iniciar sesión</button>
                             </div>
                             <div class="col-lg-5">
-                                <span>¿Aún no te registras? <a href="">Crea una cuenta</a> </span>
+                                <span>¿Aún no te registras? <a href="auth/register">Crea una cuenta</a> </span>
                             </div>
                           </form>
                     </div>
