--- a/src/app/pages/tienda/tienda.component.html
+++ b/src/app/pages/tienda/tienda.component.html
@@ -1,4 +1,4 @@
-<div class="bannerPrincipal m-top" style="background-image: url(static/img/bg/bg-tienda.png);">
+<div class="bannerPrincipal m-top" style="background-image: url(assets/img/bg/bg-tienda.png);">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -10,7 +10,7 @@
               <input type="text" class="form-control" id="inlineFormInputGroup">
               <div class="input-group-prepend">
                 <div class="input-group-text">
-                  <img src="static/img/iconos/buscador.png" alt="">
+                  <img src="assets/img/iconos/buscador.png" alt="">
                 </div>
               </div>
             </div>
@@ -30,114 +30,46 @@
           <div class="accordion" id="accordionExample">
             <div class="card">
               <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
-
                 <ngb-panel [ngClass]="['owl-vendido','owl-theme']">
-
                   <ng-template ngbPanelTitle>
                     <span>Filatelia</span>
                   </ng-template>
-
                   <ng-template ngbPanelContent>
-                    <div class="card-body">
-                      <div class="check">
-                        <input type="checkbox" name="category" id="c_1" class="css-checkbox" />
-                        <label for="c_1" class="css-label">Álbunes <span>(345)</span></label>
-                      </div>
-                      <div class="check">
-                        <input type="checkbox" name="category" id="c_2" class="css-checkbox" />
-                        <label for="c_2" class="css-label">Accesorios <span>(130)</span></label>
-                      </div>
-                      <div class="check">
-                        <input type="checkbox" name="category" id="c_3" class="css-checkbox" />
-                        <label for="c_3" class="css-label">Estampillas <span>(45)</span></label>
-                      </div>
+                    <div class="check">
+                      <input type="checkbox" name="category" id="c_1" class="css-checkbox" />
+                      <label for="c_1" class="css-label">Álbunes <span>(345)</span></label>
+                    </div>
+                    <div class="check">
+                      <input type="checkbox" name="category" id="c_2" class="css-checkbox" />
+                      <label for="c_2" class="css-label">Accesorios <span>(130)</span></label>
+                    </div>
+                    <div class="check">
+                      <input type="checkbox" name="category" id="c_3" class="css-checkbox" />
+                      <label for="c_3" class="css-label">Estampillas <span>(45)</span></label>
                     </div>
 
                   </ng-template>
                 </ngb-panel>
-
-
                 <ngb-panel>
-
                   <ng-template ngbPanelTitle>
-                    <span>Filatelia</span>
+                    <span>Numismática</span>
                   </ng-template>
-
                   <ng-template ngbPanelContent>
-                    <div class="card-body">
-                      <div class="check">
-                        <input type="checkbox" name="category" id="c_1" class="css-checkbox" />
-                        <label for="c_1" class="css-label">Álbunes <span>(345)</span></label>
-                      </div>
-                      <div class="check">
-                        <input type="checkbox" name="category" id="c_2" class="css-checkbox" />
-                        <label for="c_2" class="css-label">Accesorios <span>(130)</span></label>
-                      </div>
-                      <div class="check">
-                        <input type="checkbox" name="category" id="c_3" class="css-checkbox" />
-                        <label for="c_3" class="css-label">Estampillas <span>(45)</span></label>
-                      </div>
+                    <div class="check">
+                      <input type="checkbox" name="category" id="c_1" class="css-checkbox" />
+                      <label for="c_1" class="css-label">Álbunes <span>(345)</span></label>
                     </div>
-
+                    <div class="check">
+                      <input type="checkbox" name="category" id="c_2" class="css-checkbox" />
+                      <label for="c_2" class="css-label">Accesorios <span>(130)</span></label>
+                    </div>
+                    <div class="check">
+                      <input type="checkbox" name="category" id="c_3" class="css-checkbox" />
+                      <label for="c_3" class="css-label">Estampillas <span>(45)</span></label>
+                    </div>
                   </ng-template>
                 </ngb-panel>
-
-
-
               </ngb-accordion>
-
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingTwo">
-                <a class="collapsed" href="" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
-                  aria-controls="collapseTwo">
-                  Numismática
-                </a>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_4" class="css-checkbox" />
-                    <label for="c_4" class="css-label">Álbunes <span>(345)</span></label>
-                  </div>
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_5" class="css-checkbox" />
-                    <label for="c_5" class="css-label">Accesorios <span>(130)</span></label>
-                  </div>
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_6" class="css-checkbox" />
-                    <label for="c_6" class="css-label">Estampillas <span>(45)</span></label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingThree">
-                <a class=" collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                  aria-controls="collapseThree">
-                  Precio
-                </a>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body">
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_7" class="css-checkbox" />
-                    <label for="c_7" class="css-label">S/100 - S/200</label>
-                  </div>
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_8" class="css-checkbox" />
-                    <label for="c_8" class="css-label">S/200 - S/300</label>
-                  </div>
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_9" class="css-checkbox" />
-                    <label for="c_9" class="css-label">S/300 - S/400</label>
-                  </div>
-                  <div class="check">
-                    <input type="checkbox" name="category" id="c_9" class="css-checkbox" />
-                    <label for="c_9" class="css-label">S/400 - S/500</label>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
