--- a/src/app/pages/catalogo/catalogo.component.html
+++ b/src/app/pages/catalogo/catalogo.component.html
@@ -76,7 +76,7 @@
                             </a>
                         </div>-->
                         <div class="col-lg-3">
-                            <a href="" class="catalogo__content__pais">
+                            <a href="/catalogo-interna" class="catalogo__content__pais">
                                 <img src="assets/img/pais/peru.png"  alt="">
                                 <h4>Perú</h4>
                             </a>
