--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
                                <li ><a href="" >Inicio</a></li>
                                <li ><a href="/tienda">Tienda</a></li>
                                <li><a >Subasta</a></li>
-                               <li><a >Catálogo</a></li>
+                               <li><a href="/catalogo">Catálogo</a></li>
                            </ul>
                        </div>
                    </div>
@@ -33,7 +33,7 @@
                </div>
                <div class="col-lg-3">
                     <div class="notificacion">
-                        <ul>                           
+                        <ul>
                             <li>
                                 <a href="" class="carrito">
                                     <img src="assets/img/iconos/carrito.svg" alt="">
