--- a/src/app/admin/components/header-admin/header-admin.component.html
+++ b/src/app/admin/components/header-admin/header-admin.component.html
@@ -5,7 +5,7 @@
                  <div class="row">
                      <div class="col-lg-3 p-0 d-flex align-items-center">
                          <div class="header__logo">
-                             <img src="assets/img/logo.png" class="img-fluid" alt="">
+                             <!--<img src="assets/img/logo.png" class="img-fluid" alt="">-->
                          </div>
                      </div>
                      <div class="col-lg-9 d-flex justify-content-end align-items-center">
