--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
       <div class="row">
           <div class="col-lg-6 header--amarillo">
                <div class="row">
-                   <div class="col-lg-3 p-0">
+                   <div class="col-lg-3 p-0 d-flex align-items-center">
                        <div class="header__logo">
                            <img src="assets/img/logo.png" class="img-fluid" alt="">
                        </div>
