--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,6 +99,105 @@ body{
     }
 }
 
+.mainAdmin{        
+    margin-left: 258px;    
+    background-color: red;
+    &__listado{
+        ul{
+            padding: 0;
+            li{
+                display: inline-block;
+                a{
+                    padding: 0px 20px;
+                    font-size: 18px;
+                    font-family: $DMregular;
+                    color: $negro;
+                }
+            }
+        }
+    }
+    .container-fluid{
+        padding: 20px;
+        min-height: calc(100vh - 159px);
+    }
+}
+
+.sidebar{
+    width: 13.5%;
+    top: 0;    
+    background-color: $negro;
+    height: 100vh;
+    z-index: 123;
+    position: fixed;
+    padding: 37px 20px;
+    &__logo{
+        width: 100%;
+        text-align: center;
+        img{
+            width: 180px;
+        }
+    }
+    &__listado{
+        margin-top: 74px;        
+        ul{
+            padding: 0 15px;
+            li{
+                padding: 11px 0px;
+                .link{
+                    position: relative;
+                    display: block;
+                    &:before{
+                        content: "";
+                        position: absolute;
+                        width: 15px;
+                        height: 15px;  
+                        background-image: url(assets/img/iconos/flecha.svg);                      
+                        transform: rotate(270deg);
+                        right: 25px;
+                        bottom: 0;
+                        top: 0;
+                        margin: auto;
+                        transition: all 0.5s;
+                    }
+                }
+                .listado{
+
+                }
+                a{
+                    color: $blanco;
+                    font-size: 21px;
+                    font-family: $DMregular;
+                    position: relative;
+                    svg,
+                    img{
+                        position: absolute;
+                        top: 5px;
+                    }
+                    svg{
+                        path{
+                            fill:$blanco;
+                        }
+                    }
+                    span{
+                        margin-left: 34px;
+                        display: block;
+                    }
+                }
+            }
+        }
+        ol{
+            li{
+                padding: 5px 0px;
+                a{
+                    font-size: 16px;
+                    color: darken($blanco, 10);
+                }
+            }
+        }
+    }
+}
+
+
 .header{
     height: 77px;
     display: none;
@@ -136,11 +235,10 @@ body{
         }
     }
     &__logo{
-        background-color:$negro;
-        margin-top: 37px;
-        margin-bottom: 66px;
+        background-color:$negro;      
     }
     &__left{
+        margin-top: 43px;
         ul{
             li{
                 padding:0px 32px;
