--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,19 +99,130 @@ body{
     }
 }
 
+.modal{
+    &__admin{
+        .modal-header{
+            background-color: $negro;
+        }
+    }
+}
+
 .mainAdmin{        
-    margin-left: 258px;    
-    background-color: red;
+    margin-left: 258px;   
+    &__boton{
+        position: relative;
+        display:inline-block;
+        color: $negro;
+        text-decoration: none;
+        &:hover{
+            text-decoration: none;
+            color: $negro;
+        }
+        .icono{
+            width: 45px;
+            height: 45px;
+            background-color: $negro;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            svg{
+                width: 20px;
+                height: 20px;
+                fill:$blanco;
+            }
+        }
+        h3{
+            font-size: 18px;
+            font-family: $DMregular;
+            margin-left: 60px;
+            padding-top: 11px;
+        }
+    }  
+    table {
+        border-collapse:separate; 
+        border-spacing:0 13px; 
+    }   
+    .table{         
+        margin-top:40px;
+        thead{
+            background-color: $negro;
+            tr{
+                th{
+                    color: $blanco;
+                    padding: 12px 10px;
+                    font-size: 18px;
+                    font-weight: lighter;
+                    font-family: $DMregular;
+                    border-top:1px solid transparent;
+                    border-bottom:1px solid transparent;
+                }
+            }
+        }
+        tbody{
+            tr{
+                th{
+                    font-weight: bold;
+                }
+                th,td{
+                    background-color:#F5F2F2; /* #F5F2F2*/
+                    padding: 10px 20px;                    
+                    height: 97px;
+                    font-family: $lato;
+                    border-top: 1px solid transparent;
+                    font-size: 15px;
+                }
+                td{
+                    &.editar{
+                        a{
+                            display: inline-block;
+                            padding: 0px 10px;
+                        }
+                    }
+                    &:last-child{
+                        text-align: right;
+                    }
+                }
+            }
+        }
+        &--normal{
+            tbody{
+                tr{
+                    th,td{
+                        height: 48px;
+                    }
+                }
+            } 
+        }
+    }
     &__listado{
+        display:flex;
+        justify-content: center;
+        margin-top: 25px;
+        margin-bottom: 50px;
         ul{
             padding: 0;
+            margin: 0;
             li{
                 display: inline-block;
+                border-left: 1px solid $plomo;
+                &:first-child{
+                    border-left: 1px solid transparent;
+                }
                 a{
-                    padding: 0px 20px;
+                    padding: 0px 35px;
                     font-size: 18px;
                     font-family: $DMregular;
                     color: $negro;
+                    text-decoration: none;
+                    &:hover{
+                        color: $mostaza;
+                    }
+                    &.active{
+                        color: $mostaza;
+                    }
                 }
             }
         }
