--- a/src/app/admin/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/admin/dashboard-admin/dashboard-admin.component.html
@@ -3,6 +3,17 @@
 
 <section class="mainAdmin m-top">
     <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="mainAdmin__listado">
+                    <ul>
+                        <li><a href="javascript:void(0)" routerLink="/" class="active">Año</a></li>
+                        <li><a href="javascript:void(0)" routerLink="pais">País</a></li>
+                        <li><a href="">Temas</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <router-outlet></router-outlet>        
     </div>
 </section>
