--- a/src/app/admin/components/pais-catalogo/pais-catalogo.component.html
+++ b/src/app/admin/components/pais-catalogo/pais-catalogo.component.html
@@ -85,7 +85,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+      <button type="button" class="btn btn--negro" (click)="modal.close('Close click')">Guardar</button>
     </div>
   </ng-template>
 
