--- a/src/app/admin/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/admin/dashboard-admin/dashboard-admin.component.html
@@ -9,7 +9,7 @@
                     <ul>
                         <li><a href="javascript:void(0)" routerLink="/" class="active">Año</a></li>
                         <li><a href="javascript:void(0)" routerLink="pais">País</a></li>
-                        <li><a href="">Temas</a></li>
+                        <li><a href="javascript:void(0)" routerLink="temas">Temas</a></li>
                     </ul>
                 </div>
             </div>
