--- a/src/app/admin/components/pais-catalogo/pais-catalogo.component.html
+++ b/src/app/admin/components/pais-catalogo/pais-catalogo.component.html
@@ -68,7 +68,7 @@
       <form class="row">
         <div class="form-group col-lg-12">
             <label for="">Imagen</label>
-            <input type="text" class="form-control">
+            <input type="file" class="form-control">
           </div>
           <div class="form-group col-lg-12">
             <label for="">Nombre</label>
