--- a/src/app/admin/components/temas-catalogo/temas-catalogo.component.html
+++ b/src/app/admin/components/temas-catalogo/temas-catalogo.component.html
@@ -69,7 +69,7 @@
         </div>
         <div class="col-lg-12">
           <label for="">Imagen</label>
-          <input type="text" class="form-control">
+          <input type="file" class="form-control">
         </div>
     </form>
   </div>
